# Valentin

./: CMakeLists.txt  Dynamic_apporach.h  Dynamic_approach.cpp  EMD_nb.cpp  bregman.cpp  emd.h  emd_test.cpp  emd_test.hpp  init_wrapper.py  main.txt  main2.txt  mainv2.cpp  ot.h  wrapper.i
